kubernetes/file-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fileserver-svc
spec:
  selector:
    app: fileserver
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 80
  # you can change the `type` as you see fit
  # the reason I've selected `NodePort` is explained here:
  # https://meysam.io/how-to-set-up-ingress-controller-in-aws-eks-d745d9107307
  type: NodePort
